# dealg

./: Baner.cpp  Baner.h  CMakeLists.txt  Canvas.cpp  Canvas.h  DynamicBaner.cpp  DynamicBaner.h  Exceptions.h  Frame.cpp  Frame.h  Game.cpp  Game.h  GenericWindow.h  InputWindow.cpp  InputWindow.h  Item.cpp  Item.h  Keys.h  LICENSE  ListWindow.cpp  ListWindow.h  README.md  Stock.h  System.cpp  System.h  assets.txt  cities.txt  main.cpp  parameters.h  runtests.sh
.github/workflows/: cmaketest.yml
doc/: high_level.puml
test/: test_assets.txt  test_baner.cpp  test_canvas.cpp  test_cities.txt  test_dynamicbaner.cpp  test_frame.cpp  test_game.cpp  test_helpers.cpp  test_helpers.h  test_inputwindow.cpp  test_listwindow.cpp  test_stock.cpp  test_system.cpp  tests.cpp  tests.h
